--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <footer>
         <div class="social-links">
+            <a href="https://x.com/zhanghaoxvan"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="https://github.com/zhanghaoxvan" aria-label="GitHub"><i class="fab fa-github"></i></a>
             <a href="mailto:3592114583@qq.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
         </div>
