--- a/download/1.html
+++ b/download/1.html
@@ -34,7 +34,7 @@
                 <br>
                 <img src="https://img.picui.cn/free/2025/07/07/686bcff3ec592.png" alt="1751895998846.png" title="1751895998846.png" />
                 <br>
-                <a href="https://zhanghaoxvan.lanzouo.com/b0138z0dkh" class="read-more">下载（） →</a>
+                <a href="https://zhanghaoxvan.lanzouo.com/b0138z0dkh" class="read-more">下载 →</a>
                 <p>密码：<code>bgrg</code></p>
             </div>
             
