--- a/download/1.html
+++ b/download/1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This website was founded!</title>
+    <title>下载 - hex - 16进制查看器</title>
     <link rel="stylesheet" href="/css/post.css">
     <link rel="stylesheet" href="/css/all.min.css">
     <!-- highlight.js 样式 -->
