--- a/download/1.html
+++ b/download/1.html
@@ -123,7 +123,7 @@
                                 <i class="fab fa-linux icon" style="color: #fcc624;"></i>
                                 <div class="info">
                                     <div class="platform">Linux</div>
-                                    <div class="format">.deb 安装包（密码：b0c9）/div>
+                                    <div class="format">.deb 安装包（密码：b0c9）</div>
                                 </div>
                             </a>
                         </div>
@@ -132,9 +132,6 @@
                         <p>所有平台版本均包含相同功能，选择与您操作系统匹配的版本</p>
                     </div>
                 </div>
-                
-                <p>通用下载链接：<a href="https://zhanghaoxvan.lanzouo.com/b0138z0dkh" class="read-more">点击下载→</a></p>
-                <p>密码：<code>bgrg</code></p>
                 
                 <h2 style="margin-top: 2rem;">使用说明</h2>
                 <p>1. 下载对应平台的安装包</p>
