--- a/download/1.html
+++ b/download/1.html
@@ -47,11 +47,11 @@
                                     <div class="format">.exe 安装文件（密码：ecbj）</div>
                                 </div>
                             </a>
-                            <a href="https://zhanghaoxvan.lanzouo.com/iQ5bh30vyc4f" target="_blank">
+                            <a href="https://zhanghaoxvan.lanzouo.com/i4CJO315s07a" target="_blank">
                                 <i class="fab fa-linux icon" style="color: #fcc624;"></i>
                                 <div class="info">
                                     <div class="platform">Linux</div>
-                                    <div class="format">.deb 安装包（密码：b0c9）</div>
+                                    <div class="format">.deb 安装包（密码：gboc）</div>
                                 </div>
                             </a>
                         </div>
