--- a/download/1.html
+++ b/download/1.html
@@ -40,18 +40,18 @@
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="dropdown-content" id="platformDropdown">
-                            <a href="https://zhanghaoxvan.lanzouo.com/ilIqi30vyc3e" target="_blank">
+                            <a href="https://zhanghaoxvan.lanzouo.com/ivqpR31agd6f" target="_blank">
                                 <i class="fab fa-windows icon" style="color: #0078d7;"></i>
                                 <div class="info">
                                     <div class="platform">Windows</div>
-                                    <div class="format">.exe 安装文件（密码：ecbj）</div>
+                                    <div class="format">.exe 安装文件（密码：fhi3）</div>
                                 </div>
                             </a>
-                            <a href="https://zhanghaoxvan.lanzouo.com/i4CJO315s07a" target="_blank">
+                            <a href="https://zhanghaoxvan.lanzouo.com/iBUcC31agd2b" target="_blank">
                                 <i class="fab fa-linux icon" style="color: #fcc624;"></i>
                                 <div class="info">
                                     <div class="platform">Linux</div>
-                                    <div class="format">.deb 安装包（密码：gboc）</div>
+                                    <div class="format">.deb 安装包（密码：5exo）</div>
                                 </div>
                             </a>
                         </div>
