--- a/download/1.html
+++ b/download/1.html
@@ -40,18 +40,18 @@
                             <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="dropdown-content" id="platformDropdown">
-                            <a href="https://zhanghaoxvan.lanzouo.com/iyv9v31rtz5g" target="_blank">
+                            <a href="https://zhanghaoxvan.lanzouo.com/iT3xy31twdwb" target="_blank">
                                 <i class="fab fa-windows icon" style="color: #0078d7;"></i>
                                 <div class="info">
                                     <div class="platform">Windows</div>
-                                    <div class="format">.exe 安装文件（密码：btd3）</div>
+                                    <div class="format">.exe 安装文件（密码：4ptv）</div>
                                 </div>
                             </a>
-                            <a href="https://zhanghaoxvan.lanzouo.com/ipJIk31rtz6h" target="_blank">
+                            <a href="https://zhanghaoxvan.lanzouo.com/i8Tns31twdva" target="_blank">
                                 <i class="fab fa-linux icon" style="color: #fcc624;"></i>
                                 <div class="info">
                                     <div class="platform">Linux</div>
-                                    <div class="format">.deb 安装包（密码：8a9u）</div>
+                                    <div class="format">.deb 安装包（密码：ei4v）</div>
                                 </div>
                             </a>
                         </div>
